better font stacks, fewer web fonts & fixed some footer layout issues

--- a/src/main/sass/_colorscheme.scss
+++ b/src/main/sass/_colorscheme.scss
@@ -8,6 +8,7 @@ $black: #000;
 $body-background: $white;
 $header-background: $grey;
 $footer-background: $black;
+$footer-link-color: $yellow;
 
 $contrasted-dark-default: $text-black;
 $contrasted-light-default: $white;
